# sem_map_demo

./: .gitignore  PNPros  README.md
combine_pnp/: CMakeLists.txt  package.xml
combine_pnp/launch/: combine_pnp.launch  kb_combine_pnp.launch
combine_pnp/src/: PCL.py  analyze_PCL.py  callbacks.py  combine_pnp_server.py  global_vars.py  support_functions.py  tester.py
combine_pnp/srv/: AcquireSrv.srv  ForgetSrv.srv  GeneratePlanSrv.srv  InitSrv.srv  UpdateAction.srv
dis_robots/sapienzbot/: 76-erratic.rules  HOWTO.txt
dot_detector/: CMakeLists.txt  package.xml
dot_detector/launch/: dotdetector.launch
dot_detector/msg/: Tag.msg
dot_detector/src/: dotDetector.cpp  dotDetector.h  imbs.cpp  imbs.hpp  main.cpp
dot_detector/srv/: TakePicture.srv
emergency_stop/: CMakeLists.txt  package.xml
emergency_stop/launch/: emergencyStop.launch  move.sh  stage.launch  stop.sh
emergency_stop/src/: emergencyStop.cpp  ps3joystick.cpp
emergency_stop/world/: willow-erratic3.world
glocalizer/: CMakeLists.txt
glocalizer/src/: glocalizer_node.cpp
glocalizer_rosbuild/: CMakeLists.txt  mainpage.dox  manifest.xml
glocalizer_rosbuild/src/: glocalizer_node.cpp
glocalizer_rosbuild/src/glocalizer/: Makefile  clfmerge.cpp  gridlinetraversal.hh  gridmap.hh  laserparameters.cpp  laserparameters.hh  localizemap.cpp  localizer.cpp  localizer.hh  motionmodel.cpp  motionmodel.hh  pgm2lmap.cpp
glocalizer_rosbuild/src/stuff/: Makefile  stat.cpp  stat_test.cpp
human_interface/launch/: robot_teleop_joy.launch
human_interface/src/: joy2twist.py
living_at_diag/: CMakeLists.txt  package.xml
living_at_diag/action/: GetCloser.action  GoToTarget.action  WaitForUser.action
living_at_diag/launch/: after_launcher.launch  launcher.launch  map.launch  minimal_navigation_stack.launch  pnpas.launch  stage.launch
living_at_diag/launch/robots/: bigRodent.launch  robot0.launch  sapienzbot.launch  segway.launch  turtlebot_2.launch
living_at_diag/maps/: Basement.world  Basement.yaml  DIAG_B1.world  giorgio_house.world  lisboa_ven.pgm  lisboa_ven.yaml  peccioli.world  peccioli.yaml  scheggia.world  scheggia.yaml
living_at_diag/plans/: AcquirePCL.pnml  ChooseAction.pnml  Conditional.pnml  ConditionalLoop.pnml  Drop.pnml  FollowMe.pnml  FollowToUpdate.pnml  Forget.pnml  ForgetPlan.pnml  Fork.pnml  GetCloser.pnml  GoTo.pnml  Home.pnml  InitialPlan.pnml  LearnPlan.pnml  LivingAtDIAG.pnml  Look.pnml  Memorize.pnml  MemorizeProcessObjList.pnml  PickUp.pnml  Recognize.pnml  Say.pnml  SendEmail.pnml  SimplePlan.pnml  SimpleTransition.pnml  TakePicture.pnml  TellObjInSight.pnml  TestPlan.pnml  Turn.pnml  Update.pnml  UpdateOperationChoice.pnml  UpdatePlan.pnml  WaitForUser.pnml
living_at_diag/scripts/: lastConfigUsed  launcher.py  run-DIAG-stage.sh  run-kb.sh
living_at_diag/src/: MyActions.cpp  MyActions.h  MyMovementActions.cpp  MyMovementActions.h  MyPNPAS.cpp
living_at_diag/src/actions/: followPerson.py  getCloser.py  getpose.py  robotpose.cpp  robotpose.py  waitForUser.py
living_at_diag/srv/: RobotPose.srv
objects_processing/: CMakeLists.txt  package.xml
objects_processing/launch/: objects_processing.launch
objects_processing/src/: objects_processing.cpp  objects_processing.hpp
objects_processing/srv/: ExtractColor.srv  ExtractObject.srv  ExtractObjectProperties.srv  RecognizeObject.srv  RecognizeObjectInScene.srv
prolog_interface/: CMakeLists.txt  package.xml
prolog_interface/launch/: prolog_interface.launch
prolog_interface/msg/: solution.msg
prolog_interface/src/: prolog_interface.cpp  test.cpp
prolog_interface/srv/: prologSrv.srv
rococo_navigation/: CMakeLists.txt  package.xml
rococo_navigation/launch/: nav.launch
rococo_navigation/script/: do_patrol.sh  run_nav_test.sh
rococo_navigation/src/: followcorridor.cpp  gui.py  robotpose.cpp  turn.cpp
sapienzbot_dialog/: CMakeLists.txt  command_history  package.xml
sapienzbot_dialog/launch/: SapienzBotDialog.launch
sapienzbot_dialog/src/: globalvars.py  queryLoop.py  sapienzbot_dialog_node.py  server.py  tester.py
sapienzbot_dialog/srv/: QueryLoop.srv  SaySrv.srv
sapienzbot_reasoning/: CMakeLists.txt  package.xml
sapienzbot_reasoning/launch/: sapienzBot.launch
sapienzbot_reasoning/msg/: Matrix.msg  relationMsg.msg
sapienzbot_reasoning/pl/: cells.pl  cone_based_reasoner.pl  graph.pl  logicalFormTranslator.pl  objects.pl  plan_reasoner.pl  plans.pl  searchGraph.pl
sapienzbot_reasoning/srv/: EvaluateCondition.srv  GroundCommand.srv  PositionEvaluationSrv.srv  RemoveObject.srv  UpdateObject.srv
semantic_map_extraction/: CMakeLists.txt  package.xml
semantic_map_extraction/XML/: augmentedMapXMLfileBasement.xml  augmentedMapXMLfileBasement.xml~2015-01-08_14:25:53  augmentedMapXMLfileBasement.xml~2015-01-08_14:27:01  augmentedMapXMLfileBasement.xml~2015-01-08_14:32:47  (+104 more)
(+146 files in other folders)
